# chessEng

./: CMakeLists.txt  main.cpp
chess/: chessboard.cpp
chess/pieces/: all_pieces  bishop.cpp  king.cpp  knight.cpp  pawn.cpp  piece.cpp  queen.cpp  rook.cpp
include/chess/: chessboard.hh
include/chess/pieces/: bishop.hh  king.hh  knight.hh  pawn.hh  piece.hh  queen.hh  rook.hh
src/: chessboard.cc
src/pieces/: bishop.cc  king.cc  knight.cc  pawn.cc  piece.cc  queen.cc  rook.cc
